# docs/swagger.yaml
@@ -1,5 +1,10 @@
 basePath: /api/v1
 definitions:
+  customer-api_internal_shared.ErrorResponse:
+    properties:
+      message:
+        type: string
+    type: object
   internal_customer.CreateCustomerRequest:
     properties:
       email:
@@ -92,21 +97,15 @@ paths:
         "400":
           description: JSON inválido o malformado
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/customer-api_internal_shared.ErrorResponse'
         "409":
           description: El email ya está registrado
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/customer-api_internal_shared.ErrorResponse'
         "500":
           description: Error interno del servidor
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/customer-api_internal_shared.ErrorResponse'
       summary: Crear un nuevo cliente
       tags:
       - Customers
